name:                clash-tasks
version:             0.0.1.0
synopsis:            Verilog like tasks for clash
homepage:            http://github.com/cchalmers/clash-tasks
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
bug-reports:         http://github.com/cchalmers/clash-tasks
stability:           Experimental
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md
description:         Diagrams based plotting library.
tested-with: GHC==8.10.7

source-repository head
 type:     git
 location: http://github.com/cchalmers/clash-tasks

library
  exposed-modules:
    Clash.Task
    Clash.Privy.Internal
    Clash.Task.Internal
  hs-source-dirs:      src
  build-depends:
    base,
    clash-prelude,
    deepseq,
    exceptions,
    transformers,
    unordered-containers,
    mtl

  ghc-options:         -Wall

  default-language:  Haskell2010
